<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="character"
            type="com.starfiles.data.models.Character" />
    </data>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="25dp"
    android:padding="15dp"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        android:src="@drawable/placeholder"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/name_label"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/character_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{character.name}"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/gender_label"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/character_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{character.gender}"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/height_label"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/character_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{character.height}"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_mass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/mass_label"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/character_mass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:text="@{character.mass}"
            android:textSize="16sp"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_eye_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/eye_color_label"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/character_eye_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:text="@{character.eye_color}"
            android:textSize="16sp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_skin_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/skin_color_label"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/character_skin_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@{character.skin_color}"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_species"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/species_label"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/character_species"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_starship"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/starship_label"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/character_starship"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_vehicles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/vehicles_label"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/character_vehicles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@{character.birth_year}"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"/>
    </RelativeLayout>
</LinearLayout>
</layout>
